--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -57,15 +57,53 @@ jobs:
         run: make clippy
 
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    name: Build - ${{ matrix.platform.name }}
+    runs-on: ${{ matrix.platform.os }}
     needs: lint
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - name: Linux x86_64
+            os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            artifact_name: bindcar-linux-amd64
+            binary_name: bindcar
+          - name: Linux ARM64
+            os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            artifact_name: bindcar-linux-arm64
+            binary_name: bindcar
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.platform.target }}
+
+      - name: Cache cross binary
+        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
+        id: cache-cross
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/bin/cross
+          key: ${{ runner.os }}-cross-v0.2.5
+          restore-keys: |
+            ${{ runner.os }}-cross-
+
+      - name: Install cross for ARM64 builds
+        if: matrix.platform.target == 'aarch64-unknown-linux-gnu' && steps.cache-cross.outputs.cache-hit != 'true'
+        run: |
+          cargo install cross --git https://github.com/cross-rs/cross --tag v0.2.5
+          cross --version
+
+      - name: Verify Docker for cross (ARM64)
+        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
+        run: |
+          docker --version
+          docker info
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -87,38 +125,35 @@ jobs:
         uses: actions/cache@v4
         with:
           path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-${{ matrix.platform.target }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-cargo-build-target-
+            ${{ runner.os }}-${{ matrix.platform.target }}-cargo-build-target-
 
-      - name: Build (release)
-        run: make build
+      - name: Build (release) - x86_64
+        if: matrix.platform.target == 'x86_64-unknown-linux-gnu'
+        run: cargo build --release --target ${{ matrix.platform.target }} --verbose
+
+      - name: Build (release) - ARM64 with cross
+        if: matrix.platform.target == 'aarch64-unknown-linux-gnu'
+        run: cross build --release --target ${{ matrix.platform.target }} --verbose
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: cargo-build
-          path: |
-            target/release/bindcar
+          name: ${{ matrix.platform.artifact_name }}
+          path: target/${{ matrix.platform.target }}/release/${{ matrix.platform.binary_name }}
           retention-days: 1
           if-no-files-found: error
 
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: cargo-build
-          path: target/
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -195,3 +230,45 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  security:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-registry-
+
+      - name: Cache cargo index
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/git
+          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-git-
+
+      - name: Cache cargo-audit binary
+        uses: actions/cache@v4
+        id: cache-cargo-audit
+        with:
+          path: ~/.cargo/bin/cargo-audit
+          key: ${{ runner.os }}-cargo-audit-latest
+          restore-keys: |
+            ${{ runner.os }}-cargo-audit-
+
+      - name: Install cargo-audit
+        if: steps.cache-cargo-audit.outputs.cache-hit != 'true'
+        run: cargo install cargo-audit --locked
+
+      - name: Run security audit
+        run: cargo audit
