--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,23 +153,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: package-crate
     steps:
-      - name: Download packaged crate
-        uses: actions/download-artifact@v4
-        with:
-          name: crate-package
-          path: .
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Publish to crates.io
-        run: |
-          CRATE_FILE=$(ls bindcar-*.crate)
-          cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} "$CRATE_FILE"
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   docker-release:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - name: Checkout code
