--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,7 +170,7 @@ jobs:
             ${{ runner.os }}-cargo-git-
 
       - name: Package crate
-        run: cargo package --verbose
+        run: cargo package --verbose --allow-dirty
 
       - name: Upload package artifact
         uses: actions/upload-artifact@v4
@@ -196,7 +196,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Publish to crates.io
-        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} --allow-dirty
 
   docker-release:
     name: Build and Push Docker Image
