--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ utoipa-swagger-ui = { version = "9", features = ["axum"] }
 prometheus = "0.14"
 lazy_static = "1.4"
 
+# RNDC client
+rndc = "0.1.3"
+
 # Kubernetes client (optional, for token validation)
 kube = { version = "0.97", features = ["client", "rustls-tls"], optional = true }
 k8s-openapi = { version = "0.23", default-features = false, optional = true }
