--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ tokio = { version = "1", features = ["full"] }
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 
+# Date/Time
+chrono = "0.4"
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
