--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ tokio = { version = "1", features = ["full"] }
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 
+# Date/Time
+chrono = "0.4"
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
@@ -48,6 +51,9 @@ utoipa-swagger-ui = { version = "9", features = ["axum"] }
 # Metrics
 prometheus = "0.14"
 lazy_static = "1.4"
+
+# RNDC client
+rndc = "0.1.3"
 
 # Kubernetes client (optional, for token validation)
 kube = { version = "0.97", features = ["client", "rustls-tls"], optional = true }
