Move to using rndc client (#13)
* Move to using rndc client

Signed-off-by: Erick Bourgeois <erick@jeb.ca>

* Add support for NS IN A records for ZoneConfig

Signed-off-by: Erick Bourgeois <erick@jeb.ca>

---------

Signed-off-by: Erick Bourgeois <erick@jeb.ca>

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -16,6 +16,11 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+env:
+  CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: 1
+  K8S_OPENAPI_ENABLED_VERSION: "1.30"
+
 jobs:
   build:
     name: Build Documentation
