--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ k8s-token-review = ["kube", "k8s-openapi"]
 # Testing
 serde_json = "1.0"
 tower = { version = "0.5", features = ["util"] }
+serial_test = "3.2"
 
 # Enable k8s-openapi version for tests and examples
 k8s-openapi = { version = "0.23", features = ["v1_30"] }
